Actualizo diseño responsive y centrar botón Descargar CV

--- a/Index-en.html
+++ b/Index-en.html
@@ -38,7 +38,9 @@
     <div class="container">
       <h1><span>Patrick Granthon</span></h1>
       <p>Web Developer & Founder of <a href="https://linklab.pe" target="_blank">LinkLab</a></p>
-      <a href="#projects" class="btn">View Projects</a>
+      <div class="btn-container">
+        <a href="#proyectos" class="btn">View Projects</a>
+      </div>
     </div>
   </header>
 
@@ -65,7 +67,9 @@
             <li> Clear and friendly communication</li>
             <li> Focus on real results</li>
           </ul>
-          <a href="cv/CV_Diseño_Programación.docx" class="btn-outline" download>Download CV</a>
+          <div class="btn-container">
+            <a href="cv/CV_Diseño_Programación.docx" class="btn-outline" download>Descargar CV</a>
+          </div>
         </div>
       </div>
     </div>
