--- a/Index.html
+++ b/Index.html
@@ -38,8 +38,10 @@
     <div class="container">
       <h1><span>Patrick Granthon</span></h1>
       <p>Desarrollador Web & Fundador de <a href="https://linklab.pe" target="_blank">LinkLab</a></p>
-      <a href="#proyectos" class="btn">Ver proyectos</a>
-    </div>
+      <div class="btn-container">
+        <a href="#proyectos" class="btn">Ver proyectos</a>
+      </div>
+    </div>      
   </header>
 
   <section id="sobre-mi" class="section fade-in">
@@ -69,8 +71,9 @@
             <li> Comunicación clara y cercana</li>
             <li> Enfoque en resultados reales</li>
           </ul>
-          
-          <a href="cv/CV_Diseño_Programación.docx" class="btn-outline" download>Descargar CV</a>
+          <div class="btn-container">
+            <a href="cv/CV_Diseño_Programación.docx" class="btn-outline" download>Descargar CV</a>
+          </div>
         </div>
       </div>
     </div>
