Mejora de contraste en testimonios para modo oscuro

--- a/index-en.html
+++ b/index-en.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="assets/favicon.png">
     <meta property="og:url" content="https://linklab.pe">     
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Patrick Granthon | Web Developer</title>
   <link rel="icon" href="assets/favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css"/>
@@ -279,5 +279,11 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
+  <noscript>
+    <p style="text-align:center; color: red; font-weight: bold;">
+      For a better experience, please open this page in your browser (Chrome, Safari, etc.)
+    </p>
+  </noscript>
+  
 </body>
 </html>
