--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="assets/favicon.png">
     <meta property="og:url" content="https://linklab.pe">     
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Patrick Granthon | Desarrollador Web</title>
   <link rel="icon" href="assets/favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css"/>
@@ -299,6 +299,12 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
+  <noscript>
+    <p style="text-align:center; color: red; font-weight: bold;">
+      Para una mejor experiencia, abre esta página desde tu navegador (Chrome, Safari, etc.)
+    </p>
+  </noscript>
+  
 </body>
 </html>
 
